# consensoor

./: .dockerignore  .gitignore  =0.1.28  CLAUDE.md  Dockerfile  Makefile  README.md  STATE_TRANSITION_PLAN.md  debug_hash.py  debug_state_diff.py  debug_trace.py  debug_types.py  pyproject.toml
consensoor/: __init__.py  attestation_pool.py  cli.py  config.py  node.py  payload_attestation_pool.py  sync_committee_pool.py  version.py
consensoor-p2p-rs/: .gitignore  Cargo.toml  README.md  pyproject.toml
consensoor-p2p-rs/python/consensoor_p2p/: __init__.py
consensoor-p2p-rs/src/: blocks_by_range.rs  blocks_by_root.rs  bootnode.rs  discovery.rs  gossip.rs  lib.rs  network.rs  peer_score.rs  rpc.rs
consensoor/beacon_api/: __init__.py  gloas.py  server.py  spec.py  utils.py
consensoor/beacon_sync/: __init__.py  client.py  exceptions.py  sync.py
consensoor/builder/: __init__.py  block_builder.py
consensoor/crypto/: __init__.py  crypto.py
consensoor/engine/: __init__.py  client.py  ssz_types.py  types.py
consensoor/metrics/: __init__.py  metrics.py
consensoor/network/: __init__.py  gossip.py
consensoor/p2p/: __init__.py  encoding.py  gossip.py  host.py
consensoor/spec/: __init__.py  constants.py  network_config.py
consensoor/spec/state_transition/: __init__.py  fork_upgrade.py  transition.py
consensoor/spec/state_transition/block/: __init__.py  eth1_data.py  execution_payload.py  execution_payload_envelope.py  execution_payload_header.py  header.py  payload_attestations.py  randao.py  sync_aggregate.py  withdrawals.py
consensoor/spec/state_transition/block/operations/: __init__.py  attestation.py  attester_slashing.py  bls_change.py  builder_request.py  consolidation_request.py  deposit.py  deposit_request.py  gloas.py  proposer_slashing.py  voluntary_exit.py  withdrawal_request.py
consensoor/spec/state_transition/epoch/: __init__.py  builder_pending_payments.py  effective_balance.py  inactivity.py  justification.py  participation.py  pending_consolidations.py  pending_deposits.py  proposer_lookahead.py  ptc_window.py  registry.py  resets.py  rewards.py  slashings.py  sync_committee.py
consensoor/spec/state_transition/helpers/: __init__.py  accessors.py  attestation.py  beacon_committee.py  domain.py  math.py  misc.py  mutators.py  predicates.py  ptc.py
consensoor/spec/types/: __init__.py  altair.py  base.py  bellatrix.py  capella.py  deneb.py  electra.py  fulu.py  gloas.py  phase0.py
consensoor/ssz/: __init__.py
consensoor/store/: __init__.py  store.py
consensoor/validator/: __init__.py  client.py  keystore.py  shuffling.py  types.py
devnet/: glamsterdam-d3-consensoor-only.yaml  glamsterdam-d7-local-interop.yaml  glamsterdam-devnet-3.yaml  gloas-genesis.yaml
tests/: __init__.py  download_comptests.sh  download_reftests.sh
tests/spec/: conftest.py  test_spec_runner.py
tests/spec/configs/: mainnet.yaml
