[package]
name = "consensoor-p2p"
version = "0.1.0"
edition = "2021"
description = "Python bindings to a Rust libp2p stack derived from Lighthouse for consensoor."
license = "Apache-2.0"

[lib]
name = "consensoor_p2p"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py311"] }
tokio = { version = "1.40", features = ["full"] }
libp2p = { version = "0.55", features = [
    "tokio",
    "tcp",
    "noise",
    "yamux",
    "gossipsub",
    "identify",
    "ping",
    "request-response",
    "macros",
    "secp256k1",
    "ed25519",
    "websocket",
    "dns",
] }
futures = "0.3"
async-channel = "2.3"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
snap = "1.1"
unsigned-varint = "0.8"
bytes = "1.7"
hex = "0.4"
sha2 = "0.10"
