[package]
name = "consensoor-p2p"
version = "0.1.0"
edition = "2021"
description = "Python bindings to a Rust libp2p stack derived from Lighthouse for consensoor."
license = "Apache-2.0"

[lib]
name = "consensoor_p2p"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py311"] }
tokio = { version = "1.40", features = ["full"] }
libp2p = { version = "0.55", features = [
    "tokio",
    "tcp",
    "noise",
    "yamux",
    "gossipsub",
    "identify",
    "ping",
    "request-response",
    "macros",
    "secp256k1",
    "ed25519",
    "websocket",
    "dns",
] }
# mplex is required by consensus-specs/specs/phase0/p2p-interface.md:197 —
# "Clients MUST support mplex and MAY support yamux. If both are supported by
# the client, yamux MUST take precedence during negotiation." Lodestar
# (js-libp2p) and nimbus (nim-libp2p) refuse to fall back when we don't
# advertise mplex, so without this we silently fail to peer with them.
libp2p-mplex = "0.43"
futures = "0.3"
async-channel = "2.3"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
snap = "1.1"
unsigned-varint = "0.8"
bytes = "1.7"
hex = "0.4"
sha2 = "0.10"
async-trait = "0.1"
enr = { version = "0.13", features = ["ed25519", "k256"] }
discv5 = "0.10"
